@@ -1,6 +1,9 @@
 GeomCrossbar <- proto(GeomInterval, {
   objname <- "crossbar"
   desc <- "Hollow bar with middle indicated by horizontal line"
+  desc_params <- list(
+    "fatten" = "a multiplicate factor to fatten middle bar by"
+  )
 
   icon <- function(.) {
     gTree(children=gList(
@@ -21,10 +24,10 @@ GeomCrossbar <- proto(GeomInterval, {
   default_pos <- function(.) PositionIdentity
   default_aes = function(.) aes(colour="black", fill="NA", width=resolution(x) * 0.9, size=1, linetype=1, min=y, max=y)
   
-  draw <- function(., data, scales, coordinates, ...) {
+  draw <- function(., data, scales, coordinates, fatten = 2, ...) {
     ggname(.$my_name(), gTree(children=gList(
       GeomBar$draw(data, scales, coordinates, ...),
-      GeomBar$draw(transform(data, min=y, max=y), scales, coordinates, ...)
+      GeomBar$draw(transform(data, min=y, max=y, size = size * fatten), scales, coordinates, ...)
     )))
   }
   
